--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -23,7 +23,7 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    font-family: $sans-serif-narrow;
+    font-family: $font1;
 
     @include breakpoint($x-large) {
       max-width: $max-width;
@@ -50,12 +50,15 @@
   -ms-flex-item-align: center;
   align-self: center;
   font-weight: bold;
-  // z-index: 20;
+  z-index: 20;
+  font-size: 1.3em;
+  color: blue;
 }
 
 .site-subtitle {
   display: block;
-  font-size: $type-size-8;
+  font-size: 0.5em;
+  color: rgba(23, 64, 141, 0.8);
 }
 
 .masthead__menu {
@@ -90,4 +93,8 @@
     padding-right: 2em;
     font-weight: 700;
   }
+}
+
+.site-title {
+  color: blue;
 }
