--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -27,7 +27,7 @@ body {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .initial-content,
@@ -69,51 +69,59 @@ body {
 }
 
 .page__title {
+  font-family: $font1;
   margin-top: 0;
-  line-height: 1;
-
-  a {
-    color: $text-color;
-    text-decoration: none;
-  }
+  line-height: 1.2;
 
   & + .page__meta {
     margin-top: -0.5em;
   }
+  a {
+    font-size: 1.6em;
+    color: mix(#fff, $primary-color, 10%);
+  }
 }
 
 .page__lead {
-  font-family: $global-font-family;
+  font-family: $font1;
   font-size: $type-size-4;
 }
 
 .page__content {
+  margin-top: 20px;
+
   h2 {
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
+    font-size: 1em;
   }
 
-	h1, h2, h3, h4, h5, h6 {
-		.header-link {
-			position: relative;
-			left: 0.5em;
-			opacity: 0;
-			font-size: 0.8em;
-			-webkit-transition: opacity 0.2s ease-in-out 0.1s;
-			-moz-transition: opacity 0.2s ease-in-out 0.1s;
-			-o-transition: opacity 0.2s ease-in-out 0.1s;
-			transition: opacity 0.2s ease-in-out 0.1s;
-		}
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    .header-link {
+      position: relative;
+      left: 0.5em;
+      opacity: 0;
+      font-size: 0.8em;
+      -webkit-transition: opacity 0.2s ease-in-out 0.1s;
+      -moz-transition: opacity 0.2s ease-in-out 0.1s;
+      -o-transition: opacity 0.2s ease-in-out 0.1s;
+      transition: opacity 0.2s ease-in-out 0.1s;
+    }
 
-		&:hover .header-link {
-			opacity: 1;
-		}
-	}
+    &:hover .header-link {
+      opacity: 1;
+    }
+  }
 
   p,
   li,
   dl {
-    font-size: 1em;
+    font-size: 0.9em;
   }
 
   /* paragraph indents */
@@ -134,20 +142,20 @@ body {
       text-decoration: underline;
 
       img {
-        box-shadow: 0 0 10px rgba(#000, 0.25);
+        box-shadow: 0 0 10px rgba(#000, 0.5);
       }
     }
   }
 
   dt {
     margin-top: 1em;
-    font-family: $sans-serif;
+    font-family: $font1;
     font-weight: bold;
   }
 
   dd {
     margin-left: 1em;
-    font-family: $sans-serif;
+    font-family: $font1;
     font-size: $type-size-6;
   }
 
@@ -210,7 +218,7 @@ body {
     }
 
     .page__title {
-      font-size: $type-size-2;
+      font-size: $type-size-3;
 
       @include breakpoint($small) {
         font-size: $type-size-1;
@@ -232,7 +240,7 @@ body {
   margin: 0 auto;
   padding: 2px 5px;
   color: #fff;
-  font-family: $caption-font-family;
+  font-family: $font1;
   font-size: $type-size-7;
   background: #000;
   text-align: right;
@@ -275,7 +283,7 @@ body {
 
 .page__share-title {
   margin-bottom: 10px;
-  font-size: $type-size-6;
+  font-size: $type-size-5;
   text-transform: uppercase;
 }
 
@@ -286,7 +294,7 @@ body {
 .page__meta {
   margin-top: 2em;
   color: $muted-text-color;
-  font-family: $sans-serif;
+  font-family: $font1;
   font-size: $type-size-6;
 
   p {
@@ -299,15 +307,9 @@ body {
 }
 
 .page__meta-title {
+  margin-top: 1px;
   margin-bottom: 10px;
-  font-size: $type-size-6;
-  text-transform: uppercase;
-}
-
-.page__meta-sep::before {
-  content: "\2022";
-  padding-left: 0.5em;
-  padding-right: 0.5em;
+  font-size: $type-size-5;
 }
 
 /*
@@ -315,8 +317,9 @@ body {
    ========================================================================== */
 
 .page__taxonomy {
+  margin-top: -10px;
   .sep {
-    display: none;
+    display: inline;
   }
 
   strong {
@@ -324,18 +327,39 @@ body {
   }
 }
 
-.page__taxonomy-item {
-  display: inline-block;
+.page__taxonomy-item-tag {
+  display: inside;
   margin-right: 5px;
   margin-bottom: 8px;
-  padding: 5px 10px;
+  padding: 3px 8px;
   text-decoration: none;
-  border: 1px solid mix(#000, $border-color, 25%);
+  border: 1px solid $background-color;
   border-radius: $border-radius;
+  background-color: rgba(#9c9ea0, 0.5);
+  font-family: $font1;
+  color: rgb(223, 61, 21);
 
   &:hover {
     text-decoration: none;
-    color: $link-color-hover;
+    color: mix(#00adb5, $text-color, 40%); /* 커서 댈 때 색깔 */
+  }
+}
+
+.page__taxonomy-item-category {
+  display: inside;
+  margin-right: 5px;
+  margin-bottom: 8px;
+  padding: 3px 8px;
+  text-decoration: none;
+  border: 1px solid $background-color;
+  border-radius: $border-radius;
+  background-color: rgba($color: #944e0c, $alpha: 0.3);
+  font-family: $font1;
+  color: rgb(223, 61, 21);
+
+  &:hover {
+    text-decoration: none;
+    color: mix(#00adb5, $text-color, 40%); /* 커서 댈 때 색깔 */
   }
 }
 
@@ -376,7 +400,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   margin: 1.414em 0;
   padding: 0;
-  font-size: 0.75em;
+  font-size: 1.3em;
   list-style: none;
 
   @include breakpoint($large) {
@@ -391,9 +415,10 @@ body {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    color: inherit;
+    color: rgba(54, 35, 4, 0.9);
     text-decoration: none;
     border-bottom: 1px solid $border-color;
+    font-family: $font1;
   }
 }
 
@@ -401,7 +426,7 @@ body {
   display: block;
   clear: both;
   color: $muted-text-color;
-  font-size: 0.6em;
+  font-size: 0.9em;
   text-transform: uppercase;
   text-align: right;
   text-decoration: none;
@@ -505,6 +530,10 @@ body {
   }
 }
 
+.utterances {
+  max-width: 100% !important;
+}
+
 /*
    Related
    ========================================================================== */
@@ -528,13 +557,17 @@ body {
   a {
     color: inherit;
     text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
 .page__related-title {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-size: $type-size-6;
-  text-transform: uppercase;
+  //color: #fcd14f;
 }
 
 /*
@@ -560,5 +593,44 @@ body {
     @include breakpoint($x-large) {
       padding-right: 0;
     }
+  }
+}
+
+ol {
+  font-size: 0.87em;
+}
+
+pre {
+  font-size: 0.55em;
+  background: rgba(189, 186, 186, 0.2);
+}
+h1 {
+  font-size: 1em;
+  font-weight: bolder;
+}
+h2 {
+  font-size: 0.9em;
+  font-weight: bolder;
+}
+h3 {
+  font-size: 0.8em;
+  font-weight: bolder;
+}
+h4 {
+  font-size: 0.7em;
+  font-weight: bolder;
+}
+h5 {
+  font-size: 0.6em;
+  font-weight: bolder;
+}
+h6 {
+  font-size: 0.5em;
+  font-weight: bolder;
+}
+
+code {
+  span {
+    font-size: 1.4em;
   }
 }
