--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size: 16 !default;
+$doc-font-size: 1 !default;
 
 /* paragraph indention */
 $paragraph-indent: false !default; // true, false (default)
@@ -17,6 +17,7 @@ $serif: Georgia, Times, serif !default;
 $sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
+$font1: "Ubuntu";
 
 /* sans serif typefaces */
 $sans-serif-narrow: $sans-serif !default;
@@ -29,27 +30,27 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
-$global-font-family: $sans-serif !default;
+$global-font-family: $font1 !default;
 $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
 /* type scale */
-$type-size-1: 2.441em !default; // ~39.056px
-$type-size-2: 1.953em !default; // ~31.248px
-$type-size-3: 1.563em !default; // ~25.008px
-$type-size-4: 1.25em !default; // ~20px
-$type-size-5: 1em !default; // ~16px
+$type-size-1: 1.441em !default; // ~39.056px
+$type-size-2: 1.153em !default; // ~31.248px
+$type-size-3: 0.963em !default; // ~25.008px
+$type-size-4: 0.85em !default; // ~20px
+$type-size-5: 0.95em !default; // ~16px
 $type-size-6: 0.75em !default; // ~12px
-$type-size-7: 0.6875em !default; // ~11px
-$type-size-8: 0.625em !default; // ~10px
+$type-size-7: 0.5875em !default; // ~11px
+$type-size-8: 0.525em !default; // ~10px
 
 /* headline scale */
-$h-size-1: 1.563em !default; // ~25.008px
-$h-size-2: 1.25em !default; // ~20px
-$h-size-3: 1.125em !default; // ~18px
-$h-size-4: 1.0625em !default; // ~17px
-$h-size-5: 1.03125em !default; // ~16.5px
-$h-size-6: 1em !default; // ~16px
+$h-size-1: 1.063em !default; // ~25.008px
+$h-size-2: 0.85em !default; // ~20px
+$h-size-3: 0.625em !default; // ~18px
+$h-size-4: 0.425em !default; // ~17px
+$h-size-5: 0.33125em !default; // ~16.5px
+$h-size-6: 0.3em !default; // ~16px
 
 /*
    Colors
