--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -24,8 +24,8 @@ site.after_footer_scripts %} {% for script in site.after_footer_scripts %}
     extensions: ["tex2jax.js"],
     jax: ["input/TeX", "output/HTML-CSS"],
     tex2jax: {
-      inlineMath: [ ['$','$'], ["\(","\)"] ],
-      displayMath: [ ['$$','$$'], ["\[","\]"] ],
+      inlineMath: [ ['$','$'] ],
+      displayMath: [ ['$$','$$'], ['\[[', '\]]'] ],
       processEscapes: true
     },
     "HTML-CSS": { availableFonts: ["TeX"] }
